Geometry Attribute Convert crashes in sculpt mode #100687

Closed
opened 2022-08-29 12:16:58 +02:00 by Campbell Barton · 10 comments

Caused by 35c601269b

The following script:

import bpy
bpy.ops.object.mode_set(mode='SCULPT')
bpy.ops.geometry.attribute_convert('EXEC_DEFAULT')

Asserts when run in background mode, e.g.

``./blender.bin --factory-startup -b --python test.py`

With: BLI_assert failed: source/blender/blenlib/BLI_span.hh:573, operator- [ ](), at 'index < this->size()'

Full back-trace.

backtrace.txt


  • Happens in master 28750bcf7e8b73d9da015898a3c0f21ef5d761f2
  • In v3.3 the operators poll function returns false.
  • Also crashes in release builds when done from the UI (since there is no Attribute to work on)
  • poll does not return false anymore, becuase since culprit commit, we always have a .hide_poly attribute

NOTE: this happens in weight-paint mode too,

Caused by 35c601269b The following script: ``` import bpy bpy.ops.object.mode_set(mode='SCULPT') bpy.ops.geometry.attribute_convert('EXEC_DEFAULT') ``` Asserts when run in background mode, e.g. ``./blender.bin --factory-startup -b --python test.py` With: `BLI_assert failed: source/blender/blenlib/BLI_span.hh:573, operator- [ ](), at 'index < this->size()'` Full back-trace. [backtrace.txt](https://archive.blender.org/developer/F13429969/backtrace.txt) ---- - Happens in `master` `28750bcf7e8b73d9da015898a3c0f21ef5d761f2` - In v3.3 the operators poll function returns false. - Also crashes in release builds when done from the UI (since there is no Attribute to work on) - poll does not return false anymore, becuase since culprit commit, we always have a `.hide_poly` attribute --- NOTE: this happens in weight-paint mode too,
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Campbell Barton changed title from Geometry Attribute Convert asserts in weight paint mode to Geometry Attribute Convert asserts in sculpt mode 2022-08-29 12:23:46 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Also crashes in release builds when done from the UI (since there is no Attribute to work on? -- this should be caught by BKE_id_attributes_active_get in the poll though, checking...)

Also crashes in release builds when done from the UI (since there is no Attribute to work on? -- this should be caught by `BKE_id_attributes_active_get` in the poll though, checking...)
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Change apparently came with 35c601269b

@HooglyBoogly : seems we now have an attribute (".hide_poly") and that messes with the poll.
Can these be marked internal or something along those lines?

Will set this to High prio since it involves crashes and is recent (feel free to lower again if unappropriate).

Change apparently came with 35c601269b @HooglyBoogly : seems we now have an attribute (`".hide_poly"`) and that messes with the poll. Can these be marked internal or something along those lines? Will set this to High prio since it involves crashes and is recent (feel free to lower again if unappropriate).
Philipp Oeser changed title from Geometry Attribute Convert asserts in sculpt mode to Geometry Attribute Convert crashes in sculpt mode 2022-09-01 09:04:19 +02:00
Member

I guess we could just poll for any attribute except the ones starting with "."?
Use allow_procedural_attribute_access in BKE_id_attributes_active_get?

I guess we could just poll for any attribute except the ones starting with "."? Use `allow_procedural_attribute_access` in `BKE_id_attributes_active_get`?
Philipp Oeser self-assigned this 2022-09-01 13:38:00 +02:00
Member

Think I got a fix

Think I got a fix

This issue was referenced by a50ca6a1cd

This issue was referenced by a50ca6a1cd72aa0556d74dd4a54de25bf2eeadcb
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100687
No description provided.